Wrapping Fix

--- a/src/components/Guide/Guide.css
+++ b/src/components/Guide/Guide.css
@@ -3,7 +3,7 @@
 .guide--main-card {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
 }
 
